# software_challenge

./: .gitignore  run.sh
install/: local_setup.sh  setup.sh
install/software_training/lib/software_training/: p1
install/software_training/share/ament_index/resource_index/parent_prefix_path/: software_training
install/software_training/share/software_training/: package.dsv  package.ps1  package.sh
log/: latest_build
src/software_training/: CMakeLists.txt  package.xml
src/software_training/action/: Waypoint.action
src/software_training/include/software_training/: p1_clear.hpp  p2_circle.hpp  p3_spawn.hpp  p4_reset.hpp  p5_distance.hpp  p6_waypoint.hpp  test.cpp
src/software_training/launch/: software_training_launch.py
src/software_training/msg/: Distance.msg
src/software_training/src/: p1_clear.cpp  p2_circle.cpp  p3_spawn.cpp  p4_reset.cpp  p5_distance.cpp  p6_waypoint.cpp
