cmake_minimum_required(VERSION 3.8)
project(software_training)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# -------------------------------------------------------------------
# find dependencies
# -------------------------------------------------------------------
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(turtlesim REQUIRED)
find_package(rclcpp_components REQUIRED)
find_package(std_msgs REQUIRED)
find_package(rcutils REQUIRED)
find_package(rcl REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(builtin_interfaces REQUIRED)
find_package(rosidl_default_generators REQUIRED)

# include_directories(include/software_training)
include_directories(include)

# -------------------------------------------------------------------
# P1
# -------------------------------------------------------------------
# add_executable(p1 src/p1_clear.cpp)
add_library(p1 SHARED
            src/p1_clear.cpp)

target_compile_definitions(p1 PRIVATE "SOFTWARE_TRAINING_BUILDING_DLL")

ament_target_dependencies(p1
  "rclcpp"
  "rclcpp_components"
  "turtlesim"
  "std_msgs")   
rclcpp_components_register_nodes(p1 "software_training::p1_clear")
set(node_plugins "${node_plugins}software_training::p1_clear;$<TARGET_FILE:p1>\n")

install(
  TARGETS
    p1
  DESTINATION
    lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # uncomment the line when a copyright and license is not present in all source files
  #set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # uncomment the line when this package is not in a git repo
  #set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

# -------------------------------------------------------------------
# Launch File
# -------------------------------------------------------------------
install(DIRECTORY
  launch
  DESTINATION share/${PROJECT_NAME}/
)

ament_package()
